<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<ListView
	 	android:id="@android:id/list"
	 	android:layout_width="fill_parent" 
	    android:layout_height="0dip"
	    android:layout_weight="1" />
	<TextView
	 	android:id="@android:id/empty"
	 	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/no_data"/>
	<LinearLayout  
	    android:id="@+id/bottom" 
        android:layout_width="fill_parent"  
        android:layout_height="44dip"  
        android:orientation="horizontal"
        >  
        <Button   
            android:id="@+id/add"
            android:layout_width="0dip"      
            android:layout_height="50dip"  
            android:layout_weight="1"
            android:text="@string/add_reminder"
            android:gravity="center"  
            />
        <Button   
            android:id="@+id/delete"
            android:layout_width="0dip"      
            android:layout_height="50dip"  
            android:layout_weight="1"
            android:text="@string/delete"
            android:gravity="center"
            />
        <Button   
            android:id="@+id/cancel"  
            android:layout_width="0dip"      
            android:layout_height="50dip"  
            android:layout_weight="1"  
            android:text="@string/done"
            android:gravity="center"  
            />  
    </LinearLayout>  
</LinearLayout>