<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/title"
        android:textSize="20dp"
		android:textStyle="bold"
		android:typeface="serif"
		android:text="@string/edit_reminder"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"> 
	</TextView>
	
	<LinearLayout
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
		android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1">
    	<ImageView
	        android:contentDescription="@string/picture"
			android:id="@+id/medicine_image"
			android:layout_weight="2"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:scaleType="fitCenter" />
		<TextView
		 	android:id="@+id/medicine_name"
		 	android:layout_weight="8"
		 	android:layout_width="0dp" 
		    android:layout_height="fill_parent" />  
	</LinearLayout>
	
	<ImageView
	    android:contentDescription="@string/picture"
	    android:src="@android:drawable/divider_horizontal_dark"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scaleType="fitXY"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp"
	    android:paddingBottom="2dp"
	    android:paddingTop="2dp" />
    
    <ScrollView android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="3">
	<LinearLayout android:orientation="vertical"
	    android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:scrollbars="vertical" >
     	<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="44dp"
		    android:orientation="horizontal">
		    <ImageView
		        android:contentDescription="@string/picture"
		        android:src="@android:drawable/ic_media_next"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:scaleType="fitStart"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"/>
		    <TextView
			 	android:id="@+id/manual_item1"
			 	android:layout_weight="8"
			 	android:layout_width="0dp" 
			    android:layout_height="44dp" 
			    android:gravity="center_vertical" />
		</LinearLayout>
     	
		<ImageView
		    android:contentDescription="@string/picture"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="0dp"
		    android:paddingRight="0dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
		
		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="44dp"
		    android:orientation="horizontal">
		    <ImageView
		        android:contentDescription="@string/picture"
		      	android:src="@android:drawable/ic_media_next"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:scaleType="fitStart"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"/>
		    <TextView
			 	android:id="@+id/manual_item2"
			 	android:layout_weight="8"
			 	android:layout_width="0dp" 
			    android:layout_height="44dp" 
			    android:gravity="center_vertical" />
		</LinearLayout>
		<ImageView
		    android:contentDescription="@string/picture"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="0dp"
		    android:paddingRight="0dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="44dp"
		    android:orientation="horizontal">
		    <ImageView
		        android:contentDescription="@string/picture"
		      	android:src="@android:drawable/ic_media_next"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:scaleType="fitStart"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"/>
		    <TextView
			 	android:id="@+id/manual_item3"
			 	android:layout_weight="8"
			 	android:layout_width="0dp" 
			    android:layout_height="44dp" 
			    android:gravity="center_vertical" />
		</LinearLayout>
		
		<ImageView
		    android:contentDescription="@string/picture"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="0dp"
		    android:paddingRight="0dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
	    <LinearLayout
		    android:orientation="horizontal"
			android:layout_width="fill_parent"
	    	android:layout_height="44dp">
	    	<TextView
	    	    android:text="@string/usage_type"
		    	android:gravity="center_vertical"
			 	android:layout_weight="1"
			 	android:layout_width="0dp" 
			    android:layout_height="fill_parent" />  
			<Spinner
				android:id="@+id/usage_type_selector"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:drawSelectorOnTop="true"
				android:prompt="@string/select_usage_type" />
		</LinearLayout>
		<ImageView
		    android:contentDescription="@string/picture"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="0dp"
		    android:paddingRight="0dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
		
		<LinearLayout android:id="@+id/default_usage_setting"
		    android:orientation="vertical"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content">
		    <LinearLayout
			    android:orientation="horizontal"
				android:layout_width="fill_parent"
		    	android:layout_height="44dp">
		    	<TextView
		    	    android:text="@string/usage_amount"
		    		android:gravity="center_vertical"
				 	android:layout_weight="4"
				 	android:layout_width="0dp" 
				    android:layout_height="fill_parent" /> 
				<TextView
		    	    android:text="每次"
		    		android:gravity="center_vertical"
				 	android:layout_weight="1"
				 	android:layout_width="0dp" 
				    android:layout_height="fill_parent" />
				<EditText
		            android:text=""
		    		android:gravity="center"
		            android:layout_weight="2"
		            android:layout_width="0dp"
		            android:layout_height="fill_parent"
		            android:id="@+id/usage_amount_edit"
		            android:inputType="number" 
		            android:focusable="false" />
				<TextView
		    	    android:text="  片"
		    		android:gravity="center_vertical"
				 	android:layout_weight="1"
				 	android:layout_width="0dp" 
				    android:layout_height="fill_parent" />
			</LinearLayout>
			<ImageView
			    android:contentDescription="@string/picture"
			    android:src="@android:drawable/divider_horizontal_dark"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:scaleType="fitXY"
			    android:paddingLeft="0dp"
			    android:paddingRight="0dp"
			    android:paddingBottom="2dp"
			    android:paddingTop="2dp" />
			<LinearLayout
			    android:orientation="horizontal"
				android:layout_width="fill_parent"
		    	android:layout_height="44dp">
		    	<TextView
		    	    android:text="@string/begin_date"
		    		android:gravity="center_vertical"
				 	android:layout_weight="1"
				 	android:layout_width="0dp" 
				    android:layout_height="fill_parent" /> 
				<EditText
		            android:text=""
		    		android:gravity="center"
		            android:layout_weight="1"
		            android:layout_width="0dp"
		            android:layout_height="fill_parent"
		            android:id="@+id/begin_date_edit"
		            android:longClickable="false"
		            android:focusable="false" />  
			</LinearLayout>
			<ImageView
			    android:contentDescription="@string/picture"
			    android:src="@android:drawable/divider_horizontal_dark"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:scaleType="fitXY"
			    android:paddingLeft="0dp"
			    android:paddingRight="0dp"
			    android:paddingBottom="2dp"
			    android:paddingTop="2dp" />
			<LinearLayout
			    android:orientation="horizontal"
				android:layout_width="fill_parent"
		    	android:layout_height="44dp">
		    	<TextView
		    	    android:text="@string/end_date"
		    		android:gravity="center_vertical"
				 	android:layout_weight="1"
				 	android:layout_width="0dp" 
				    android:layout_height="fill_parent" /> 
				<EditText
		            android:text=""
		    		android:gravity="center"
		            android:layout_weight="1"
		            android:layout_width="0dp"
		            android:layout_height="fill_parent"
		            android:id="@+id/end_date_edit"
		            android:longClickable="false"
		            android:focusable="false" />
		    </LinearLayout>
		</LinearLayout>
	</LinearLayout>
	</ScrollView>
	
	<LinearLayout android:id="@+id/custom_reminder_setting"
	    android:orientation="vertical"
	    android:layout_width="fill_parent" 
	    android:layout_height="0dp"
	    android:layout_weight="3">
		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="44dp"
		    android:orientation="horizontal">
			<TextView
			 	android:id="@+id/add_reminder"
			 	android:layout_weight="8"
			 	android:layout_width="0dp" 
			    android:layout_height="44dp" 
			    android:gravity="center_vertical" />
		    <ImageView
		        android:id="@+id/add_reminder_icon"
		        android:contentDescription="@string/picture"
		      	android:src="@android:drawable/btn_plus"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:scaleType="fitStart"/>
		</LinearLayout>
		<ListView android:id="@android:id/list"
	 	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" />
	</LinearLayout>
		
	<LinearLayout  
	    android:id="@+id/bottom" 
        android:layout_width="fill_parent"  
        android:layout_height="44dip"  
        android:orientation="horizontal"
        >  
        <Button   
            android:id="@+id/ok"
            android:layout_width="0dip"      
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:gravity="center"  
            />
        <Button   
            android:id="@+id/cancel"  
            android:layout_width="0dip"      
            android:layout_height="fill_parent"  
            android:layout_weight="1"  
            android:text="@string/cancel"
            android:gravity="center"  
            />  
    </LinearLayout>  
</LinearLayout>
