<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<TextView
	    android:id="@+id/title"
	    android:text="@string/app_name" 
		android:textSize="20dp"
		android:textStyle="bold"
		android:typeface="serif"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="center">
	</TextView>
	<LinearLayout
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
    	android:layout_height="50dp">
    	<ImageView
	        android:contentDescription="@string/picture"
			android:id="@+id/previous"
	        android:src="@android:drawable/ic_media_previous"
			android:layout_weight="2"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:scaleType="fitCenter"/>
	    <TextView
		 	android:id="@+id/date"
		 	android:gravity="center"
		 	android:layout_weight="6"
		 	android:layout_width="0dp"
		    android:layout_height="fill_parent" />  
		<ImageView
	        android:contentDescription="@string/picture"
	        android:src="@android:drawable/ic_media_next"
			android:id="@+id/next"
			android:layout_weight="2"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:scaleType="fitCenter"/>
	</LinearLayout>
	
	
	<ImageView
	    android:contentDescription="@string/picture"
	    android:src="@android:drawable/divider_horizontal_dark"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scaleType="fitXY"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp"
	    android:paddingBottom="2dp"
	    android:paddingTop="2dp" />
	
	<LinearLayout
	    android:orientation="vertical"
		android:layout_width="fill_parent"
    	android:layout_height="80dp">
		<LinearLayout
		    android:orientation="vertical"
			android:layout_width="fill_parent"
	    	android:layout_height="40dp">
		    <TextView
		        android:text=""
			 	android:id="@+id/current_time"
			 	android:layout_width="fill_parent"
			    android:layout_height="20dp" /> 
			<ImageView
		        android:contentDescription="@string/picture"
		        android:src="@drawable/arrow_down"
				android:id="@+id/current_time_arrow"
				android:layout_width="fill_parent"
				android:layout_height="15dp"
				android:paddingLeft="0dp"
				android:scaleType="fitStart"/> 
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/time_line"
		    android:orientation="horizontal"
			android:layout_width="fill_parent"
	    	android:layout_height="15dp"
	    	android:layout_marginTop="5dp">
			<TextView
			 	android:id="@+id/time_pos"
			 	android:layout_weight="1"
			 	android:layout_width="0dp"
			 	android:layout_gravity="left"
			    android:layout_height="fill_parent" /> 
		</LinearLayout>
		<LinearLayout
		    android:orientation="horizontal"
			android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#003333">
		</LinearLayout>
	</LinearLayout>
	
	<ImageView
	    android:contentDescription="@string/picture"
	    android:src="@android:drawable/divider_horizontal_dark"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scaleType="fitXY"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp"
	    android:paddingBottom="2dp"
	    android:paddingTop="2dp"/>
	
	<ListView android:id="@android:id/list"
	 	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" />
	<TextView
	 	android:id="@android:id/empty"
	 	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/no_data"/>
	
</LinearLayout>
